# PI3-2025-1

./: README.md
Firmware/: index.html  partitions.csv
Firmware/main/: CMakeLists.txt  main.c
Firmware/partition/: script.js
imagens/: S
